plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.directors'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.hibernate:hibernate-core:6.2.1.Final'
    implementation 'mysql:mysql-connector-java:8.0.32'
    implementation 'com.h2database:h2'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.locationtech.jts:jts-core:1.19.0'

    implementation 'org.springframework.retry:spring-retry'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.locationtech.proj4j:proj4j:1.2.3'
}

tasks.named('test') {
    useJUnitPlatform()
}
